Complete live validation tooling and publish thirty-minute provenance measurements